[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Button.gd" type="Script" id=1]
[ext_resource path="res://resources/Element.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[node name="Button" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -27.0
margin_right = 71.5
margin_bottom = 27.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Text"
align = 1
valign = 1

[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
